# tifari

./: .gitignore  Cargo.toml  README.md  TODO  download.html  index.css  index.html  make_prod.sh  package-lock.json  package.sh
backend/: Cargo.toml
backend-api/: Cargo.toml
backend-api/src/: error.rs  lib.rs  main.rs
backend/src/: error.rs  lib.rs
frontend/: Cargo.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: APIComms.js  App.css  App.js  Config.js  ImageEditor.css  ImageEditor.js  ImageSlot.js  Logging.js  SearchField.js  TagList.css  TagList.js  index.js  main.rs
models/: Cargo.toml
models/src/: lib.rs
prod/: Cargo.toml
prod/src/: main.rs
src/: main.rs
src/backend/: error.rs  mod.rs
