[package]
name = "backend-api"
version = "0.1.0"
authors = ["Justas Dabrila <justasdabrila@gmail.com>"]

[dependencies]
backend = { path = "../backend", version = "*" }
models = { path = "../models", version = "*" }

hyper-staticfile = "0.2.0"

hyper = "0.11.27"
futures = "0.1.21"

serde_json = "1"
serde_derive = "1"
serde = "1"

[lib]
name = "tifari_backend_api"
path = "src/lib.rs"

[[bin]]
name = "backend_api"
path = "src/main.rs"
